# engine

./: .gitignore  CMakeLists.txt  README.md  Several.cscope_file_list  engine.cscope_file_list  imgui.ini
data/: anim.json  scene.json  walk_anim.json
models/: alienhead.glb  mocap1.fbx  treee.glb
models/alienhead/: alienhead.gltf
models/coolguy/: coolguy.gltf  coolguy.gltf.glb  normalMapping.gltf
scripts/: test.lua
shaders/: fragment_background.glsl  fragment_clouds_accum.glsl  fragment_composite_motion_taa.glsl  fragment_composite_transparency.glsl  fragment_deferred.glsl  fragment_deferred_ae.glsl  fragment_deferred_pl.glsl  fragment_evsm.glsl  fragment_evsm_cube.glsl  fragment_filter.glsl  fragment_filter_horizontal.glsl  fragment_filter_stub.glsl  fragment_fstex.glsl  fragment_gbuffer.glsl  fragment_hdr_extract.glsl  fragment_motion_blur.glsl  fragment_motion_c.glsl  fragment_motion_fs.glsl  fragment_motion_o.glsl  fragment_sharpen.glsl  fragment_ssao.glsl  fragment_taa.glsl  fragment_transparency.glsl  geometry_cubemap.glsl  vertex.glsl  vertex_depth.glsl  vertex_depth_skin.glsl  vertex_fs.glsl  vertex_fs_world.glsl  vertex_motion_fs.glsl  vertex_motion_o.glsl  vertex_motion_o_skin.glsl  vertex_pt.glsl  vertex_skin.glsl
src/: animation.cc  animation.h  app.cc  app.h  bounding_sphere.h  camera.cc  camera.h  directional_light.cc  frustum_culler.cc  frustum_culler.h  input_context.cc  input_context.h  input_manager.cc  input_manager.h  instance_list.h  instance_list_builder.cc  instance_list_builder.h  job_scheduler.cc  job_scheduler.h  joint.cc  joint.h  lod_component.cc  lod_component.h  main.cc  material.cc  material.h  math_util.cc  math_util.h  mesh.cc  mesh.h  mesh_builder.cc  mesh_builder.h  mesh_data.cc  mesh_data.h  model.cc  model.h  point_light.cc  point_shadow_mapper.h  render_buffer.cc  render_buffer.h  (+22 more)
src/core/: job_scheduler.cc  job_scheduler.h
src/core/animation/: animation.cc  animation.h  animation_blend_tree.cc  animation_blend_tree.h  animation_instance.cc  animation_instance.h  animation_state_graph.cc  animation_state_graph.h  animation_system.cc  animation_system.h  joint.cc  joint.h  skeleton.cc  skeleton.h
src/core/app/: app.cc  app.h  input_context.cc  input_context.h  input_manager.cc  input_manager.h  window.cc  window.h
src/core/audio/: audio.cc  audio.h
src/core/ecs/: components.h  entity.h  game_world.cc  game_world.h
src/core/physics/: physics.cc  physics.h
src/core/render/: frustum_culler.cc  frustum_culler.h  fullscreen_quad.cc  fullscreen_quad.h  instance_list.h  instance_list_builder.cc  instance_list_builder.h  render_buffer.cc  render_buffer.h  render_debug.cc  render_debug.h  render_layer.cc  render_layer.h  render_pass.h  renderer (copy).cc  renderer (copy).h  renderer.cc  renderer.h  shader.cc  shader.h
src/core/render/passes/: background_motion_vectors_pass.cc  background_motion_vectors_pass.h  bloom_pass.cc  bloom_pass.h  deferred_directional_light_pass.cc  deferred_directional_light_pass.h  deferred_pass.cc  deferred_pass.h  deferred_point_light_pass.cc  deferred_point_light_pass.h  gbuffer_pass.cc  gbuffer_pass.h  geometry_render_pass.cc  geometry_render_pass.h  motion_blur_pass.cc  motion_blur_pass.h  motion_vectors_pass.cc  motion_vectors_pass.h  object_motion_vectors_pass.cc  object_motion_vectors_pass.h  point_shadow_face_pass.cc  point_shadow_face_pass.h  point_shadow_pass.cc  point_shadow_pass.h  shadow_cascade_pass.cc  shadow_cascade_pass.h  shadow_map_filter_pass.h  shadow_map_pass.cc  shadow_map_pass.h  ssao_pass.cc  ssao_pass.h  taa_pass.cc  taa_pass.h  transparency_composite_pass.cc  transparency_composite_pass.h  transparency_pass.cc  transparency_pass.h  volumetric_clouds_pass.cc  volumetric_clouds_pass.h
src/core/resources/: asset.h  lod_component.cc  material.cc  material.h  mesh.cc  mesh.h  mesh_data.cc  mesh_data.h  model.h  resource_load.cc  resource_load.h  resource_manager.h  skeleton_description.cc  skeleton_description.h  texture.cc  texture.h
src/core/scene/: bounding_sphere.h  camera.cc  camera.h  directional_light.h  point_light.cc  point_light.h  renderable.cc  renderable.h  scene.cc  scene.h
src/core/util/: math_util.cc  math_util.h  mesh_builder.cc  mesh_builder.h  timer.cc  timer.h
src/editor/: editor_gui.cc  editor_gui.h  imvec_operators.cc  imvec_operators.h  transform_gizmos.cc  transform_gizmos.h
